ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamnxt-ingress
  namespace: streamnxt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  rules:
    - host: app-k3s.eliteworld.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3003
    - host: api-k3s.eliteworld.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
    - host: admin-k3s.eliteworld.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 3000
    - host: sadmin-k3s.eliteworld.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: super-admin
                port:
                  number: 3002
    - host: ads-k3s.eliteworld.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ad-server
                port:
                  number: 3004
